# Full-Economy-ABM-Simulation

./: ARCHITECTURE.md  MOVEMENT_IMPLEMENTATION.md  Makefile  PROJECT_SUMMARY.md  README.md  SCENARIOS.md  VISUALIZATION_GUIDE.md  animation_simulation.py  create_optimized_animation.py  economic_evolution_animation.html  final_demo.py  full_simulation_demo.html  interactive_simulation.py  live_animation_demo.py  map_influence_analysis.py  massive_simulation.db  massive_simulation.py  massive_simulation_results.json  movement_data.json  movement_demo.html  optimized_animation.json  realtime_demo.py  simple_animation_player.html  simulation_results_viewer.html  stable_demo.py  start_demo.py  view_simulation_results.py  visualization_demo.html  working_animation.html
backend/: create_movement_demo.py  demo_simulation.py  enhanced_simulation.py  full_simulation_demo.py  pyproject.toml  quick_demo.py  run_demo.py  run_long_term_demo.py  run_with_visualization.py
backend/api/: __init__.py  dependencies.py  main.py  websocket.py
backend/api/routes/: control.py  metrics.py  scenarios.py  snapshots.py
backend/demo_snapshots/: index.json  snapshot_0000000100.zst
backend/simcore/agents/: bank.py  base.py  central_bank.py  entrepreneur.py  firm.py  household.py  person.py
frontend/control-tower/: package.json  vite.config.ts
frontend/control-tower/src/: App.tsx  index.css  main.tsx
frontend/control-tower/src/api/: simulation.ts
frontend/control-tower/src/components/: Dashboard.tsx  EventStream.tsx  Header.tsx  KPICards.tsx  ParamPanel.tsx  SystemStatus.tsx
frontend/control-tower/src/components/Charts/: EconomicCharts.tsx
frontend/control-tower/src/hooks/: useDashboardData.ts  useSimulationControl.ts
frontend/control-tower/src/store/: dashboardStore.ts
frontend/world-viewer/: package.json  vite.config.ts
frontend/world-viewer/src/: App.css  App.tsx  index.css  main.tsx
frontend/world-viewer/src/api/: simulation.ts
frontend/world-viewer/src/components/: Header.tsx  LayerToggles.tsx  MapCanvas.tsx  SidePanel.tsx  TimeBar.tsx  WorldViewer.tsx
frontend/world-viewer/src/hooks/: useSimulationControl.ts  useSimulationData.ts  useWebSocket.ts
frontend/world-viewer/src/store/: simulationStore.ts
scenarios/: baseline.yml  credit_boom.yml  long_term_20k.yml  supply_shock.yml
schemas/: telemetry.json
